--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@
         
     </section>
 
-
     <!-- About Section -->
     <section id="intro-section" class="intro-section " style="">
         <div class="spin-card">
@@ -236,8 +235,7 @@
 
     </section>
 
-    <!-- music -->
-
+    <!-- music section -->
     <section class="music-section-wrapper " id="musicSection">
         <div class="spin-card">
             <h2>MUSIC</h2>
@@ -268,6 +266,7 @@
             
     </section>
 
+    <!-- gift section -->
     <section id="giftSection" class="">
         <div class="spin-card">
             <h2>DOWNLOADS</h2>
@@ -341,9 +340,9 @@
             }
         }
     </script>
-    <!-- Footer Section-->
 
-    <footer class="footer-container col-md-12 float-center text-center">
+    <!-- Footer -->
+    <footer class="footer-container col-md-12 float-center text-center" style="height: 10vh;">
         <div class="footer-links" style="display: none;">
             <div class="footer-link-wrapper">
                 <div class="footer-link-items">
