--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <div class="app-form">
                                     <div class="app-form-group">
                                         <form name="contactMe" id="form" class="topBefore" method="POST"
-                                            data-netlify="true">
+                                            netlify>
                                             <input class="app-form-control" aria-labelledby="name" name="name" id="name"
                                                 type="text" placeholder="NAME" value="Name">
                                     </div>
