--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <button id="stop-btn">&#9724;</button>
                 </div>
                 <audio id="audio-player" controls>
-                    <source src="https://github.com/Al-1-0/ALLAMM/raw/main/Leisure%20Centre.mp3" type="audio/mpeg">
+                    <source src="Leisure Centre.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
