--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 </nav>
 
     <!-- home section -->
-    <section class="section gift-section-wrapper ">
+    <!-- <section class="section gift-section-wrapper ">
         <h2 class="text-center">ALLAMM <br>
-            <!-- music player -->
+            music player
             <div id="music-player" style="display: none;">
 
                 <div id="controls" style="text-align: left;">
@@ -117,12 +117,12 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         </h2>
-        <img src="4.png"/>
+        <img src="4.png"/> -->
 
                 
     
                 <!-- links to spotify / apple music -->
-    </section>
+    <!-- </section> -->
 
     <!-- booking section  -->
     <section id="contact-section" class="contact-section ">
