--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
 
     <!-- home section -->
     <section class="section gift-section-wrapper ">
-        <h2 class="text-center">ALLAMM </h2>
+        <a href="https://allamm.netlify.app/" style="cursor:pointer;">
+            <h2 class="text-center">ALLAMM </h2>
+        </a>
     </section>
 
     <!-- About Section -->
